--- a/index.html
+++ b/index.html
@@ -218,18 +218,18 @@
 
                 <div class="form-group">
                   <label>Harga Modal (<span id="labelModalKelompok">Satuan</span>)</label>
-                  <input type="number" id="stokHargaModal" required value="0" />
+                  <input type="text" id="stokHargaModal" required value="0" />
                 </div>
 
                 <div class="form-group">
                   <label>Harga Jual (<span id="labelJualKelompok">Satuan</span>)</label>
-                  <input type="number" id="stokHargaKelompok" required value="0" />
+                  <input type="text" id="stokHargaKelompok" required value="0" />
                 </div>
 
                 <div class="form-group" id="groupTurunan" style="display: none;">
                   <label>Harga Jual Turunan (<span id="labelTurunan">Item</span>)</label>
                   <div class="turunan-info">
-                    <input type="number" id="stokHargaTurunan" value="0" />
+                    <input type="text" id="stokHargaTurunan" value="0" />
                     <small id="infoTurunan">Harga per item turunan</small>
                   </div>
                 </div>
